syntax = "proto3";
option go_package = "https://github.com/namtx/rdb/proto";

service Rdb {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Set(SetRequest) returns (SetResponse) {}
}

message GetRequest { string key = 1; }

message GetResponse {
  string key = 1;
  bytes value = 2;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
}

message SetResponse {}
